k8s_manifest/common/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hwp-converter
  labels:
    app.kubernetes.io/part-of: hwp-converter
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
